# aoc2021

./: Cargo.toml
data/: day4.txt
src/: d1p1.rs  d1p2.rs  d2p1.rs  d2p2.rs  d3p1.rs  d3p2.rs  d4p1.rs  d4p2.rs  d5p1.rs  d5p2.rs  d6p1.rs  d6p2.rs  d7p1.rs  d7p2.rs
