[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-integer = "0.1"
itertools = "0.10.2"

[[bin]]
name = "d1p1"
path = "src/d1p1.rs"

[[bin]]
name = "d1p2"
path = "src/d1p2.rs"

[[bin]]
name = "d2p1"
path = "src/d2p1.rs"

[[bin]]
name = "d2p2"
path = "src/d2p2.rs"

[[bin]]
name = "d3p1"
path = "src/d3p1.rs"

[[bin]]
name = "d3p2"
path = "src/d3p2.rs"

[[bin]]
name = "d4p1"
path = "src/d4p1.rs"